<resources>
    <string name="app_name">돌픽</string>
    <string name="btn_reload">최신이미지</string>
    <string name="btn_list">아이돌 리스트</string>
    <string name="btn_newuser">회원가입</string>
    <string name="loading">loading...</string>
    <string name="btn_left">이전</string>
    <string name="btn_right">다음</string>
    <string name="btn_download">이미지 저장</string>
    <string name="action_settings">Settings</string>
    <string name="image_save_finish">이미지 저장 완료</string>
    <string name="try_download">다시 한번 다운로드를 해주세요.</string>
</resources>
